feat: add route to serach of books and reactoring.
